Add block level styling for label elements

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,14 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+label {
+  display: block;
+}
+/* input {
+  display: block;
+  margin-bottom: 1em;
+} */
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
